Move requests handling to app, add request status codes.
